Added client side js file

--- a/views/templates/index.hbs
+++ b/views/templates/index.hbs
@@ -12,7 +12,12 @@
     <div class="main-content">
         {{>header}}
         <p>Welcome to weather app!</p>
+        <form>
+            <input type="text" placeholder="location"/>
+            <button type="submit">Search</button>
+        </form>
     </div>
     {{>footer}}
+    <script src="/js/app.js"></script>
 </body>
 </html>
