Added query selectors and some styles

--- a/views/templates/index.hbs
+++ b/views/templates/index.hbs
@@ -16,6 +16,10 @@
             <input type="text" placeholder="location"/>
             <button type="submit">Search</button>
         </form>
+        <div class="weather-info">
+            <p id='place'></p>
+            <p id='info'></p>
+        </div>
     </div>
     {{>footer}}
     <script src="/js/app.js"></script>
