--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,3 +38,17 @@ header a{
 #about-img{
     width: 250px;
 }
+
+input{
+    border: 1px solid #cccccc;
+    padding: 8px;
+}
+
+button{
+    cursor: pointer;
+    border: 1px solid #888888;
+    background: #888888;
+    color: white;
+    padding: 8px;
+    border-radius: 5px;
+}
